--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cafedeluna</title>
+    <title>cafedeloona</title>
     <link rel="stylesheet" href="style.css">
 <!--
 Tooplate 2121 Wave Cafe
@@ -18,7 +18,7 @@ https://www.tooplate.com/view/2121-wave-cafe
         <div class="tm-left-inner">
           <div class="tm-site-header">
             <i class="fas fa-coffee fa-3x tm-site-logo"></i>
-            <h1 class="tm-site-name">CAFE DE LUNA </h1>
+            <h1 class="tm-site-name">CAFE DE LOONA </h1>
           </div>
           <nav class="tm-site-nav">
             <ul class="tm-site-nav-ul">
